--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -39,7 +39,8 @@ collections:
             name: "album_list"
             widget: "list"
             fields:
-              - {label: ID, name: id, widget: ncw-id, prefix: album, timestamp: true, hint: This widget generates an unique read-only id}
+              # - {label: ID, name: id, widget: ncw-id, prefix: album, timestamp: true, hint: This widget generates an unique read-only id}
+              - {label: "ID", name: "id", widget: number, timestap: true;}
               - {label: "Album title", name: "title", widget: string}
               - {label: "Year", name: year, widget: number}
               - {label: "Album description", name: "description", widget: text}
