photo album content change

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -42,6 +42,8 @@ collections:
               - {label: "ID", name: "id", widget: "ncw-id", hint: "This is the album ID"}
               - {label: "Album title", name: "title", widget: "string"}
               - {label: "Year", name: "year", widget: number}
+              - {label: "Camera", name: "camera", widget: "string"}
+              - {label: "Camera lens", name: "camera_lens", widget: "string"}
               - {label: "Album description", name: "description", widget: "text"}
               - {label: "Album cover image", name: "cover_image", widget: "image"}
               - {label: "Albums images", name: "images", widget: "image", media_library: { name: cloudinary, output_filename_only: true, config: { multiple: true } }}
