--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "react-delay-render": "^0.1.2",
     "react-dom": "^18.1.0",
     "react-fast-marquee": "^1.3.2",
+    "react-images-viewer": "^1.7.1",
+    "react-img-zoom": "^0.1.0",
     "react-intersection-observer": "^9.1.0",
+    "react-modal-image": "^2.5.0",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-motion": "^0.2.6",
     "sass": "^1.52.1",
+    "smooth-scrollbar": "^8.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
