--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-delay-render": "^0.1.2",
     "react-dom": "^18.1.0",
     "react-fast-marquee": "^1.3.2",
+    "react-icons": "^4.4.0",
     "react-images-viewer": "^1.7.1",
     "react-img-zoom": "^0.1.0",
     "react-intersection-observer": "^9.1.0",
