--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-motion": "^0.2.6",
+    "react-smooth-scrollbar": "^8.0.6",
     "react-spring": "^9.4.5",
     "resize-observer": "^1.0.4",
     "sass": "^1.52.1",
     "smooth-scrollbar": "^8.7.4",
+    "smooth-scrollbar-react": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
