--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-modal-image": "^2.5.0",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
+    "react-router-scroll-top": "^0.3.1",
     "react-scripts": "5.0.1",
     "react-scroll-motion": "^0.2.6",
     "react-smooth-scrollbar": "^8.0.6",
