--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-map-interaction": "^2.1.0",
     "react-modal-image": "^2.5.0",
     "react-moment": "^1.1.2",
+    "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-router-scroll-top": "^0.3.1",
     "react-scripts": "5.0.1",
