--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "custom-cursor-react": "^1.0.5",
     "framer-motion": "^6.3.3",
     "gsap": "^3.10.4",
+    "locomotive-scroll": "^4.1.4",
     "moment": "^2.29.3",
     "netlify-cms": "^2.10.192",
     "netlify-cms-media-library-cloudinary": "^1.3.10",
@@ -29,6 +30,7 @@
     "react-map-interaction": "^2.1.0",
     "react-modal-image": "^2.5.0",
     "react-moment": "^1.1.2",
+    "react-parallax": "^3.5.1",
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-router-scroll-top": "^0.3.1",
