--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "netlify-cms": "^2.10.192",
     "netlify-cms-media-library-cloudinary": "^1.3.10",
     "react": "^18.1.0",
+    "react-animated-cursor": "^2.5.1",
     "react-delay-render": "^0.1.2",
     "react-dom": "^18.1.0",
     "react-fast-marquee": "^1.3.2",
