--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-scroll-top": "^0.3.1",
     "react-scripts": "5.0.1",
     "react-scroll-motion": "^0.2.6",
+    "react-scroll-parallax": "^3.3.1",
     "react-spring": "^9.4.5",
     "resize-observer": "^1.0.4",
     "sass": "^1.52.1",
