fix: config file fix 3

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -71,7 +71,7 @@ collections:
     name: "footer"
     files:
       - label: "Footer fields"
-        name: "footer"
+        name: "footer_fields"
         file: "src/content/footer.json"
         fields: 
           - {label: "Header titel", name: "header_title", widget: string, required: false}
